--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "express": "^4.18.2",
+    "figlet": "^1.5.2",
     "inquirer": "^8.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2"
